# SaltPepper

./: .gitignore  BRAIN.md  Makefile  README.md  bootstrap.py  makeitsalty.py  pyproject.toml  requirements.txt  tech-stack.json  vibe-stats.json
saltpepper/: __init__.py  __main__.py  cli.py  tiers.py
saltpepper/config/: __init__.py  defaults.yaml
saltpepper/context/: history.py
saltpepper/kitchen/: PEPPER.md  spicerack.yaml
saltpepper/models/: claude.py  gemma.py
saltpepper/router/: classifier.py  embedder.py  example_bank.json  grinder.py  prompts.py  vector_classifier.py
saltpepper/tracker/: savings.py
tests/: test_classifier.py  test_savings.py
